testdata/baselines/reference/submodule/conformance/destructuringArrayBindingPatternAndAssignment4.errors.txt
destructuringArrayBindingPatternAndAssignment4.ts(5,7): error TS2802: Type 'number[] | null' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.


==== destructuringArrayBindingPatternAndAssignment4.ts (1 errors) ====
    // #35497
    
    
    declare const data: number[] | null;
    const [value] = data; // Error
          ~~~~~~~
!!! error TS2802: Type 'number[] | null' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
    